# apps/api/src/admin/dto/admin-edit-caregiver.dto.ts
@@ -1,16 +1,4 @@
-import {
-  ArrayMinSize,
-  IsArray,
-  IsIn,
-  IsInt,
-  IsNotEmpty,
-  IsOptional,
-  IsString,
-  Matches,
-  Max,
-  MaxLength,
-  Min,
-} from 'class-validator';
+import { ArrayMinSize, IsArray, IsIn, IsInt, IsOptional, Matches, Max, Min } from 'class-validator';
 import { City, Gender, Language, Qualification, Religion, Validation } from '@vitacare/shared-constants';
 
 /**
@@ -50,26 +38,7 @@ export class AdminEditCaregiverDto {
   religion?: Religion;
 
   @IsOptional()
-  @IsNotEmpty({ message: 'PROFILE_011' })
-  @Matches(Validation.NAME_REGEX, { message: 'PROFILE_020' })
-  father_name?: string;
-
-  @IsOptional()
-  @Matches(Validation.PHONE_REGEX, { message: 'PROFILE_007' })
-  father_phone?: string;
-
-  @IsOptional()
-  @IsNotEmpty({ message: 'PROFILE_014' })
-  @MaxLength(Validation.ADDRESS_MAX_LENGTH, { message: 'PROFILE_015' })
-  current_address?: string;
-
-  @IsOptional()
   @IsArray({ message: 'GEN_001' })
   @IsIn(Object.values(City), { each: true, message: 'GEN_001' })
   preferred_cities?: City[];
-
-  @IsOptional()
-  @IsString()
-  @MaxLength(Validation.NOTES_MAX_LENGTH, { message: 'GEN_001' })
-  notes?: string | null;
 }
